# data-mining

./: mael_order_detail.db  mael_order_detail.xlsx  mael_order_detail_renew.xlsx  meal_order_detail.db  pyproject.toml  requirements.txt
code/: cooking_cn.ipynb  cooking_en.ipynb  flow_chart.ipynb
