[project]
name = "data-mining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "asttokens==3.0.1",
    "debugpy==1.8.20",
    "executing==2.2.1",
    "matplotlib==3.10.8",
    "matplotlib-inline==0.2.1",
    "nest-asyncio==1.6.0",
    "numpy==2.4.2",
    "packaging==26.0",
    "pandas==3.0.1",
    "parso==0.8.6",
    "pillow==12.1.1",
    "pip==26.0.1",
    "platformdirs==4.9.2",
    "prompt-toolkit==3.0.52",
    "psutil==7.2.2",
    "pure-eval==0.2.3",
    "pygments==2.19.2",
    "pyparsing==3.3.2",
    "python-dateutil==2.9.0.post0",
    "pyzmq==27.1.0",
    "setuptools==82.0.0",
    "six==1.17.0",
    "stack-data==0.6.3",
    "tornado==6.5.4",
    "traitlets==5.14.3",
    "typing-extensions==4.15.0",
    "tzdata==2025.3",
    "wcwidth==0.6.0",
    "wheel==0.46.3",
]
